# VTK-m_TopologyGraph-Refactor

./: .gitignore  changes.txt
examples/contour-visualiser/: CMakeLists.txt  ContourVisualiser.cpp  README.md  ct.cpp  ct.h  filter.cpp  filter.h  interface.cpp  interface.h  mc.cpp  mc.h  triangle.cpp  triangle.h
examples/contour-visualiser/jonas/: CinemaExporter.cpp  CinemaExporter.h  VTKDataSetWriter2.cpp  VTKDataSetWriter2.h
examples/contour_tree_augmented/: 200koutput-auto-io.txt  200koutput-manual-io.txt  ContourTreeApp.cxx  cmake-instructions.txt
examples/contour_tree_augmented/build-4/: 5b.txt  CMakeCache.txt  ContourTreeGraph--BPECT--original-fullCT-ColumnFormat.txt  ContourTreeGraph--BPECT--original-fullCT.gv  ContourTree_Augmented  Makefile  cmake_install.cmake  doubleASCII-conn.txt  doubleASCII-offs.txt
vtkm/: Assert.h
vtkm/cont/: Invoker.h  Logging.h
vtkm/cont/internal/: ConnectivityExplicitInternals.h
vtkm/filter/contour/: Contour.cxx
vtkm/filter/scalar_topology/: ContourTreeUniformAugmented.cxx  ContourTreeUniformAugmented.h  ContourTreeUniformDistributed.cxx
vtkm/filter/scalar_topology/worklet/: ContourTreeUniformAugmented.h
vtkm/filter/scalar_topology/worklet/contourtree/: ChainGraph.h
vtkm/filter/scalar_topology/worklet/contourtree_augmented/: ActiveGraph.h  ContourTree.h  ContourTreeMaker.h  MergeTree.h  MeshExtrema.h  ProcessContourTree.h
vtkm/internal/: ArrayPortalBasic.h  CMakeLists.txt
vtkm/io/: VTKDataSetReaderBase.cxx  VTKPolyDataReader.cxx  VTKUnstructuredGridReader.cxx
vtkm/worklet/testing/: UnitTestContourTreeUniformDistributed.cxx
(+17 files in other folders)
